<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>andino_base</name>
  <version>0.1.0</version>
  <description>The andino_base package</description>

  <author email="franco.c@ekumenlabs.com">Franco Cipollone</author>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>libgflags-dev</depend>
  <depend>libserial-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
