<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>andino_bringup</name>
  <version>0.1.0</version>
  <description>Contains launch files to bring up andinobot robot.</description>

  <author email="franco.c@ekumenlabs.com">Franco Cipollone</author>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>andino_description</exec_depend>
  <exec_depend>andino_control</exec_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
