<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>andino_hardware</name>
  <version>0.1.0</version>
  <description>The andino_hardware package</description>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <maintainer email="javier.balloffet@ekumenlabs.com">Javier Balloffet</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
