<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>andino_navigation</name>
  <version>0.1.0</version>
  <description>
    Bring up nav2 package with Andino.
  </description>
  <maintainer email="olmerg@ekumenlabs.com">Olmer Garcia</maintainer>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>launch_ros</build_depend>

  <exec_depend>andino_gz_classic</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

